html elements added

--- a/book-store/src/app/shared/components/header/header.component.html
+++ b/book-store/src/app/shared/components/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="#">Book-store</a>
+        <a class="navbar-brand" href="#">products</a>
+        <a class="navbar-brand" href="login">Login</a>
+        <a class="navbar-brand" href="signin">Register</a>
+    </div>
+</nav>
